--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,12 @@
+
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
 }
+
+/* Applies the property values to the html and body element, and elements with class="wrapper" */
 
 html,
 body,
@@ -12,10 +16,15 @@ body,
   padding: 0;
 }
 
+ /* Applies the property values to the body element */
+
 body {
   font-family: sans-serif;
   background-color: #f9fbfd;
 }
+
+/* Applies the property values to elements with class="wrapper" */
+
 
 .wrapper {
   padding-top: 30px;
@@ -23,12 +32,18 @@ body {
   padding-right: 20px;
 }
 
+ /* Applies the property values to the header element */
+
+
 header {
   text-align: center;
   padding: 20px;
   padding-top: 0px;
   color: hsl(206, 17%, 28%);
 }
+
+/* Applies the property values to elements with class="card" */
+
 
 .card {
   background-color: hsl(0, 0%, 100%);
@@ -42,6 +57,8 @@ header {
   padding: 30px 40px;
 }
 
+
+
 .card-header::after {
   content: " ";
   display: block;
@@ -50,9 +67,13 @@ header {
   height: 2px;
 }
 
+/* Applies the property values to elements with class="card-body" */
+
 .card-body {
   min-height: 100px;
 }
+
+/* Applies the property values to elements with class="card-footer" */
 
 .card-footer {
   text-align: center;
@@ -72,6 +93,8 @@ header {
   clear: both;
 }
 
+/* Applies the property values to elements with class="btn" */
+
 .btn {
   border: none;
   background-color: hsl(360, 91%, 36%);
@@ -88,14 +111,20 @@ header {
   cursor: pointer;
 }
 
+/* Applies the property values when the button element is disabled */
+
 button[disabled] {
   cursor: default;
   background: #c0c7cf;
 }
 
+/* Applies the property values to elements with class="float-right" */
+
 .float-right {
   float: right;
 }
+
+/* Applies the property values to elements with id="password" */
 
 #password {
   -webkit-appearance: none;
@@ -118,6 +147,8 @@ button[disabled] {
   overflow: hidden;
 }
 
+/* Applies media queries and the set property values to elements with class="btn" and element with id="password" */
+
 @media (max-width: 690px) {
   .btn {
     font-size: 1rem;
@@ -129,6 +160,8 @@ button[disabled] {
     font-size: 1rem;
   }
 }
+
+/* Applies media queries and the set property value to elements with class="btn" */
 
 @media (max-width: 500px) {
   .btn {
